--- a/index2.html
+++ b/index2.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <div class="block__container">
-      <h2>Какой то текст</h2>
-      <button class="button">Go</button>
+      <h2>2 страница --- Какой то текст</h2>
+      <button class="button ls">Go</button>
       <div class="out">--</div>
     </div>
-    <script src="script.js"></script>
+    <script src="script2.js"></script>
   </body>
 </html>
